scripts/origin-configs/envoy-static-origin.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config: 
          generate_request_id: false
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
              routes:
              - match:
                  prefix: /
                direct_response:
                  status: 200
                  body:
                    filename: www/index.html
          http_filters:
          - name: envoy.router
            config:
              dynamic_stats: false
#admin:
#  access_log_path: /tmp/envoy.log
#  address:
#    socket_address:
#      address: 0.0.0.0
#3      port_value: 8081
