scripts/origin-configs/nighthawk-test-origin.yaml
static_resources:
  listeners:
  # define an origin server on :10000 that always returns "lorem ipsum..."
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config: 
          generate_request_id: false
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: service
              domains:
              - "*"
          http_filters:
          #- name: envoy.fault
          #  config:
          #    max_active_faults: 100
          #    delay:
          #      header_delay: {}
          #      percentage:
          #        numerator: 100
          - name: test-server   # before envoy.router because order matters!
            config:
              response_size: 1024
              #response_headers:
              #- { header: { key: "foo", value: "bar"} }
              #- { header: { key: "foo", value: "bar2"}, append: true }
              #- { header: { key: "x-nh", value: "1"}}
          - name: envoy.router
            config:
              dynamic_stats: false
#admin:
#  access_log_path: /tmp/envoy.log
#  address:
#    socket_address:
#      address: 0.0.0.0
#      port_value: 8081
